<resources>
    <string name="app_name">Android开发</string>
    <string name="string_one">1</string>
    <string name="string_two">2</string>
    <string name="string_three">3</string>
    <string name="string_four">4</string>
    <string name="string_five">5</string>
    <string name="string_six">6</string>
    <string name="string_seven">7</string>
    <string name="string_night">8</string>
    <string name="string_nine">9</string>
</resources>